--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,7 @@ li a:hover {
         top: 3.4rem;
         left: -100%;
         z-index: 111111;
+        justify-content: start;
     }
     .menu {
         display: block;
